# formalfinance

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: operations.md  roadmap.md  sla.md
docs/api/: v1.md
examples/: benchmark_manifest.json  companyfacts_sample.json  filing_clean.json  filing_risky.json
formalfinance/: __init__.py  api.py  baseline_compare.py  benchmark.py  certificate.py  cli.py  engine.py  evidence.py  llm.py  models.py  pilot_readiness.py  profiles.py  proof.py  rulebook.py  rules.py  rules_ixbrl.py  rules_taxonomy.py  sec_accession_ingest.py  sec_discovery.py  sec_ingest.py  security.py  store.py  tracing.py  triage.py
tests/: test_accession_ingest.py  test_benchmark.py  test_engine.py  test_llm.py  test_pilot.py  test_service.py  test_store.py  test_triage.py
