[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formalfinance"
version = "0.1.2"
description = "Proof-oriented SEC filing conformance checks for XBRL/iXBRL packages."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "FormalFinance" }
]
keywords = ["xbrl", "ixbrl", "edgar", "sec", "compliance", "validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Accounting",
]

[project.scripts]
formalfinance = "formalfinance.cli:main"

[tool.setuptools]
packages = ["formalfinance"]
